--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,21 +4,22 @@
 
 name: text_indexing
 description: Dart library for creating an inverted index on a collection of text documents.
-version: 1.0.0
+version: 1.1.0
 repository: https://github.com/GM-Consult-Pty-Ltd/text_indexing
 homepage: https://github.com/GM-Consult-Pty-Ltd
 # publish_to: none
 issue_tracker: https://github.com/GM-Consult-Pty-Ltd/text_indexing/issues
 
 environment:
-  sdk: '>=2.17.6 <3.0.0'
+  sdk: ">=3.8.0 <4.0.0"
+  flutter: ">=3.25.0"
 
 dependencies:
   # -----PubDev Packages (in alphabetic order) -----
-  collection: ^1.17.0
-  meta: ^1.8.0
-  rxdart: ^0.27.5
-  text_analysis: ^1.0.0
+  collection: ^1.19.1
+  meta: ^1.17.0
+  text_analysis: ^1.0.0+2
+  # rxdart: ^0.28.0
 
 dev_dependencies:
   gmconsult_dev: ^0.0.7
